--- a/index.html
+++ b/index.html
@@ -17,8 +17,26 @@
             <div class="destination" id="barcelona">
                 <h2>Berlin</h2>
             </div>
-        </div>
-    </div>
+
+            <div class="destination" id="mumbai">
+                <h2>Mumbai</h2>
+            </div>
+
+            <div class="destination" id="manila">
+                <h2>Manila</h2>
+            </div>
+
+            <div class="destination" id="lagos">
+                <h2>lagos</h2>
+            </div>
+
+            <div class="destination" id="bogota">
+                <h2>Bagota</h2>
+            </div>
+
+
+
+        </div>    
 
 </body>
 </html>
