--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="destination" id="lagos">
-                <h2>lagos</h2>
+                <h2>Lagos</h2>
             </div>
 
             <div class="destination" id="bogota">
