--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="destination" id="bogota">
-                <h2>Bagota</h2>
+                <h2>Bogota</h2>
             </div>
 
 
